[package]
name = "can-messages"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.22", default-features = false }
arbitrary = { version = "1.0", optional = true }
num-traits = "0.2.14"

[build-dependencies]
anyhow = "1.0"
dbc-codegen = { path = "../../" }

[dev-dependencies]
approx = "0.5.0"

[features]
default = ["debug", "arb", "range_checked"]
arb = ["arbitrary"]
debug = []
range_checked = []
